--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@hookform/resolvers": "^3.3.4",
     "@types/node": "20.11.27",
     "@types/react": "18.2.65",
     "@types/react-dom": "18.2.22",
@@ -19,7 +21,9 @@
     "postcss": "8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.0",
     "tailwindcss": "3.4.1",
-    "typescript": "5.4.2"
+    "typescript": "5.4.2",
+    "zod": "^3.22.4"
   }
 }
